MINOR-FIX: change bg image cropping for landscape images

--- a/style/style.css
+++ b/style/style.css
@@ -6743,7 +6743,11 @@ button& {
   display: block;
   position: absolute;
   top: 0;
+}
+
+.inner .bg *[class^="bg-"] img.fp-height {
   left: 0;
+  right: auto;
 }
 
 @media screen and (orientation: landscape) {
@@ -6758,6 +6762,11 @@ button& {
     width: 100%;
     height: auto;
   }
+}
+
+.inner .bg *[class^="bg-"] img.fp-width {
+  left: auto;
+  right: 0;
 }
 
 @media screen and (orientation: landscape) {
